--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="overlay"></div>
 
     <div class="content">
-        <img src="logo.png" alt="KINGTV Logo" class="logo">
+        <img src="logo.png" alt="logo.png" class="logo">
 
         <h1>KINGTV</h1>
         <p class="tagline">
@@ -54,4 +54,5 @@
 </footer>
 
 </body>
+
 </html>
